--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,10 @@
     "default_icon": "icon-16.png",
     "default_popup": "popup.html"
   },
+  "web_accessible_resources": [{
+    "resources": ["icons/*.svg"],
+    "matches": ["<all_urls>"]
+  }],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
